[package]
name = "csv-reader"
version = "0.1.0"
edition = "2021"

license = "MIT"
keywords = ["csv","comma","parser","delimited","separated"]
authors = ["Paul Aspinall <paspinall@suitsmecard.com>"]
description = "CSV reader/parser, allowing for commas and new lines in quoted text"
homepage = "https://github.com/paul-aspinall/csv-reader"
repository = "https://github.com/paul-aspinall/csv-reader"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
